Refactor and added error handling